<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Online Shop </string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_home">Home</string>
    <string name="refresh">Refresh</string>
    <string name="cart">Cart</string>
    <string name="change_pass">Change Password</string>
    <string name="title_category">Category</string>
    <string name="title_fav">Favourite</string>
    <string name="title_cart">Cart</string>
    <string name="communicate">Communicate</string>
    <string name="contact">Contact Us</string>
    <string name="about">About Us</string>

    <string name="faq">FAQ</string>
    <string name="work">Work</string>
    <string name="logout">LogOut</string>
    <string name="shopbycategory">Shop by Category</string>
    <string name="search">Search</string>
    <string name="no_category_found">No Category Found</string>
    <string name="view_all">View All</string>
    <!--    <string name="view_all"><u>View All</u></string>-->
    <string name="mail_send_msg">We will send you an OTP on this email to verify. </string>
    <string name="verify_your_mobile">Verify Your Mobile </string>
    <string name="please_type_verification_code_sent_to">Please type OTP sent to</string>
    <string name="personal_info">Personal Info</string>
    <string name="not_registered_click_here_to_login"><u>Not Registered yet? Click Here to SignUp</u></string>
    <string name="forgottext">Forgot Password ?</string>
    <string name="changepswtext">Change Password </string>
    <string name="changepsw">Change Password ?</string>
    <string name="ortext"><u>OR</u></string>
    <string name="profile">Profile</string>
    <string name="delivery_boy">Delivery Boy</string>
    <string name="refer">Referral Code (optional)</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile No</string>
    <string name="city">City</string>
    <string name="select_city">Select City</string>
    <string name="select_area">Select Area</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>

    <string name="dateofbirth">Date Of Birth</string>
    <string name="is_login">Login ?</string>
    <string name="sign_up">SignUp</string>
    <string name="next">Next</string>
    <string name="otp">Enter OTP</string>
    <string name="deliverytime">Delivery Time</string>
    <string name="select_delivery_date">Select delivery day</string>
    <string name="verify_your_email">Verify Your Email </string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no_data_found">NO DATA FOUND</string>
    <string name="more_variant">More Variants</string>
    <string name="fav_text">Save</string>
    <string name="share_text">Share</string>
    <string name="similarproduct">Similar Products</string>
    <string name="product_details">Product Details</string>
    <string name="quantity">Quantity</string>
    <string name="buynow">Go To Cart</string>
    <string name="relatedproducts">Related Products</string>
    <string name="view_more"><u>View More</u></string>
    <string name="msg_no_result">Sorry, no results found</string>
    <string name="msg_search_again">Please check the spelling or try a different word</string>

    <string name="no_fav_found">No Favourites Found</string>
    <string name="limit_alert">apologies, max product quantity limit reached.</string>

    <string name="no_item_cart">Cart is Empty</string>
    <string name="deleteproductmsg">Are you sure, you want to remove this product from cart ?</string>
    <string name="deleteproducttitle">Remove Product</string>
    <string name="stock_limit">Oops! Limited stock available. </string>
    <string name="total_amt">Subtotal</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="free">Free</string>
    <string name="cart_subtotal">Total</string>

    <string name="checkout">Checkout</string>
    <string name="update_location">Update Your Location</string>
    <string name="Delivery_Address">Delivery Address</string>
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="Contact_detail">Contact Details</string>
    <string name="current_location">Current Location</string>
    <string name="order_list">Order Summary</string>
    <string name="placeorder">Place Order</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="promo_code_msg">Have a Promo Code?</string>
    <string name="promo_code">Promo Code</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="selectcity">Please Select City</string>
    <string name="selectarea">Please Select Area</string>
    <string name="product_name">Product Name</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="noitem_incart">No Items in the Cart !</string>
    <string name="noitem_incart_msg">Please add some of the items in cart that will appear here</string>
    <string name="shop_now">Shop Now</string>
    <string name="sort">Sortlist</string>
    <string name="filterby">Filter By</string>
    <string name="payment_type">Payment Type</string>
    <string name="payment_mathod">Payment Method</string>
    <string name="cod_pay">Cash On Delivery</string>
    <string name="onlinepay">Online Payment</string>
    <string name="pay_u">PayUMoney</string>
    <string name="upi_payment">UPI Payment</string>
    <string name="paypal">PayPal</string>
    <string name="upi">UPI</string>
    <string name="onlinepaytype">payumoney</string>
    <string name="codpaytype">cod</string>
    <string name="selectpaymethod">Select Payment Method</string>
    <string name="orderplaced">Order Placed</string>
    <string name="successorder">Your order has been Successfully Placed !</string>
    <string name="summary">Order Summary</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="total">Total :&#160;</string>
    <string name="order_success">Order Successfully Placed</string>
    <string name="txn_cancel_msg">Are you sure you want to cancel the transaction?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="type">Type</string>
    <string name="qty_1">Qty:&#160;</string>
    <string name="more_variants">More Variants</string>
    <string name="update_alert">Update Alert</string>
    <string name="up_location">Update Location</string>
    <string name="submit">Submit</string>
    <string name="req_type">Request Type</string>
    <string name="amount">Amount</string>
    <string name="completed">Completed</string>
    <string name="update_msg_1">Update the App for a batter experience!</string>
    <string name="not_now">Not Now</string>
    <string name="update_now">Update</string>
    <string name="no_traker"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="noitem_intracker">You have not order yet</string>
    <string name="order_track">Track Order</string>
    <string name="ordered_id">Ordered Id:&#160;</string>
    <string name="placedon">Placed On</string>
    <string name="order_date">Order Date:&#160;</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="return_order">Return Item</string>
    <string name="quantity_tracking">Qty:</string>
    <string name="view_details">View Details</string>
    <string name="order_placed">Order\nPlaced</string>
    <string name="processed">Order\nProcessed</string>
    <string name="shipped">Order\nShipped</string>
    <string name="delivered">Order\nDelivered</string>
    <string name="returned">Returned</string>
    <string name="resend">Resend OTP</string>
    <string name="other_details">Other Details</string>
    <string name="trackingstatus">Tracking Status on</string>
    <string name="order_status">Order Status</string>
    <string name="cancel_order_detail">Cancel Order ?</string>
    <string name="cancel_success">Cancelled Successfully</string>
    <string name="request_success">Request Sent Successfully</string>
    <string name="cancel_msg">Are you sure, you want to cancel this item ?</string>
    <string name="return_msg">Are you sure, you want to return this item ?</string>
    <string name="rate">Rate Us</string>
    <string name="sharapp">Share App</string>
    <string name="refere">Refer &amp; Earn</string>
    <string name="wallet">Wallet</string>
    <string name="balance">Balance :&#160;</string>
    <string name="wallet_balance">Wallet Balance  </string>
    <string name="point_alert">note : You should have minimum 100 rupees in your wallet for Withdraw Request</string>
    <string name="bank_name">Bank Name</string>
    <string name="holder_name">Account Holder Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_no">Account No</string>
    <string name="request_amount">Request Amount</string>

    <!--invite friend msg-->
    <string name="invite_frnd">Invite friends</string>
    <string name="refer_code_copied">Refer Code Copied to Clipboard</string>
    <string name="refer_message_1">Refer a friend and earn &#160;</string>
    <string name="refer_message_2">&#160; on first successful delivered order that register with your code</string>
    <string name="your_refer_code">Your Referral Code</string>
    <string name="tap_copy">Tap To Copy</string>
    <string name="refer_now">REFER NOW</string>
    <string name="refer_share_msg_1">I have earned money using&#160;</string>
    <string name="refer_share_msg_2">&#160;app. you can also earn money by downloading app from below link and enter referral code while login-&#160; </string>

</resources>
