<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:id="@+id/group1"
        android:checkableBehavior="single"
        >



    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_tracker"
            android:icon="@drawable/ic_tracking"
            android:title="@string/order_track" />

        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/delivery_boy"
            android:icon="@drawable/loader"
            android:title="@string/delivery_boy" />
        <item
            android:id="@+id/changePass"
            android:icon="@drawable/ic_pass"
            android:title="@string/change_pass" />


    </group>
    <group
        android:id="@+id/group5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/refer"
            android:icon="@drawable/ic_person_add"
            android:title="@string/refere" />

    </group>
    <item
        android:id="@+id/g_title"
        android:title="@string/communicate">
        <menu>
            <group
                android:id="@+id/group3"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/contact"
                    android:icon="@drawable/ic_contact1"
                    android:title="@string/contact" />
                <item
                    android:id="@+id/about_us"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about" />
                <item
                    android:id="@+id/menu_rate"
                    android:icon="@drawable/ic_rate"
                    android:title="@string/rate" />
                <item
                    android:id="@+id/menu_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/sharapp" />

            </group>
        </menu>
    </item>
    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_faq"

            android:title="@string/faq" />
        <item
            android:id="@+id/menu_terms"
            android:icon="@drawable/ic_terms"
            android:title="@string/terms_conditions" />
        <item
            android:id="@+id/menu_privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />

    </group>
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>