<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_shadow"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        app:srcCompat="@drawable/ic_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promo_code_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/promo_code"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edtPromoCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edt_bg"
            android:hint="@string/promo_code"
            android:paddingTop="@dimen/margin_10dp"
            android:paddingBottom="@dimen/margin_10dp" />

        <TextView
            android:id="@+id/tvAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="@dimen/small_size"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnApply"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:text="@string/apply" />

            <ProgressBar
                android:id="@+id/pBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:minWidth="25dp"
                android:minHeight="25dp"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>