<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <include layout="@layout/toolbar_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartrecycleview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lyttotal"
        android:layout_below="@+id/toolbar" />


    <RelativeLayout
        android:id="@+id/lyttotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/card_shadow"
        android:padding="@dimen/margin_10dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/lytamt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/total_amt"
                android:textSize="@dimen/txt_size" />

            <TextView
                android:id="@+id/txtstotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="@dimen/txt_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytdelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lytamt"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/delivery_charge"
                android:textSize="@dimen/txt_size" />

            <TextView
                android:id="@+id/txtdeliverycharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="@dimen/txt_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytsubtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lytdelivery"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cart_subtotal"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtsubtotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lytsubtotal"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_button"
            android:paddingStart="5dp"
            android:paddingTop="8dp"
            android:paddingEnd="5dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/txttotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/txtcheckout"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txtcheckout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/imgcheckout"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/checkout"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgcheckout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/checkout" />

        </RelativeLayout>
    </RelativeLayout>


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lytempty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/emptycart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noitem_incart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/noitem_incart_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/btnShowNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_btn"
            android:clickable="false"
            android:text="@string/shop_now"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>